Добавляет форму и @media

--- a/source/form.html
+++ b/source/form.html
@@ -36,100 +36,102 @@
       </nav>
     </header>
     <main class="main-form">
-        <p class="form__tender"> Конкурс на самое безбашенное путешествие с Пинк</p>
-        <p class="form__histori">Поделитесь своей историей и получите шанс выиграть ценный приз &#8212; 1000 миль на вашу бонусную карту!<span class="visually-hidden">Пожалуйста, заполните форму ниже:</span>
-        </p>
-        <form class="form__user user__list" action="index.html" method="post">
-          <fieldset class="form__personal">
-            <legend class="visually-hidden">Персональные данные</legend>
+      <p class="form__tender"> Конкурс на самое безбашенное путешествие с Пинк</p>
+      <p class="form__histori">Поделитесь своей историей и получите шанс выиграть ценный приз &#8212; 1000 миль на вашу бонусную карту!<span class="visually-hidden">Пожалуйста, заполните форму ниже:</span>
+      </p>
+      <form class="form__user user__list" action="index.html" method="post">
+        <fieldset class="form__personal">
+          <legend class="visually-hidden">Персональные данные</legend>
 
-            <p class="personal__wrapper">
-              <label for="surname">Фамилия:</label>
-              <input class="personal__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию*" required>
-            </p>
-
-            <p class="personal__wrapper">
-              <label for="name">Имя:</label>
-              <input class="personal__input" type="text" id="name" name="name" placeholder="Введите ваше имя*" required>
-            </p>
-
-            <p class="personal__wrapper">
-              <label for="middle-name">Отчество:</label>
-              <input class="personal__input" type="text" id="middle-name" name="middle-name" placeholder="Ну и отчество тоже">
-            </p>
-          </fieldset>
-
-          <fieldset class="form__progress">
-            <p class="progress__title">Ваши безбашенные<br> достежения в путешествии</p>
-
-            <p class="progress__wrapper">
-              <input class="progress__btn visually-hidden" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
-              <label class="progress__mark" for="selfie-shark">Сделал селфи с акулой</label>
-            </p>
-
-            <p class="progress__wrapper">
-              <input class="progress__btn visually-hidden" type="checkbox" name="burn-beach" id="burn-beach" checked>
-              <label class="progress__mark" for="burn-beach">Обгорел на пляже</label>
-            </p>
-
-            <p class="progress__wrapper">
-              <input class="progress__btn visually-hidden" type="checkbox" name="see-chack" id="see-chack">
-              <label class="progress__mark" for="see-chack">Видел Чака Норриса</label>
-            </p>
-
-            <p class="progress__wrapper">
-              <input class="progress__btn visually-hidden" type="checkbox" name="souvenir" id="souvenir">
-              <label class="progress__mark" for="souvenir">Накупил сувениров</label>
-            </p>
-
-            <p class="progress__wrapper">
-              <input class="progress__btn visually-hidden" type="checkbox" name="tower" id="tower" checked>
-              <label class="progress__mark" for="tower">Удержал башню</label>
-            </p>
-
-            <p class="progress__wrapper">
-              <input class="progress__btn visually-hidden" type="checkbox" name="smash" id="smash">
-              <label class="progress__mark" for="smash">Разгромил отель</label>
-            </p>
-
-          </fieldset>
-
-          <fieldset class="form__user-contact">
-            <legend class="user-contact__title visually-hidden">Контакты пользователя</legend>
-            <p class="user-contact__wrapper">
-              <label for="tel">Номер телефона</label>
-              <input class="user-contact__tel" type="tel" id="tel" name="tel" placeholder="Номер, пожалуйста">
-            </p>
-
-            <p class="user-contact__wrapper">
-              <label for="email">Номер телефона</label>
-              <input class="user-contact__email" type="email" id="email" name="email" placeholder="Введите почту*" required>
-            </p>
-          </fieldset>
-
-          <fieldset class="form__app">
-            <legend>С каким приложением путешествовали?</legend>
-            <p class="app__wrapper">
-              <input class="btn" type="radio" name="app" id="app-ios" checked>
-              <label class="app__ios" for="app-ios">Pink для iOS</label>
-            </p>
-
-            <p class="app__wrapper">
-              <input class="btn" type="radio" name="app" id="app-android">
-              <label class="app__android" for="app-android">Pink на Android</label>
-            </p>
-
-            <p class="app__wrapper">
-              <input class="btn" type="radio" name="app" id="app-windows">
-              <label class="app__windows" for="app-windows">Windows Phone</label>
-            </p>
-          </fieldset>
-
-          <p class="form__post">
-            <legend class="post__title">Опишите свои эмоции</legend>
-            <textarea name="name" rows="8" cols="30"></textarea>
+          <p class="personal__wrapper">
+            <label for="surname">Фамилия:</label>
+            <input class="personal__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию*" required>
           </p>
-        </form>
+
+          <p class="personal__wrapper">
+            <label for="name">Имя:</label>
+            <input class="personal__input" type="text" id="name" name="name" placeholder="Введите ваше имя*" required>
+          </p>
+
+          <p class="personal__wrapper">
+            <label for="middle-name">Отчество:</label>
+            <input class="personal__input" type="text" id="middle-name" name="middle-name" placeholder="Ну и отчество тоже">
+          </p>
+        </fieldset>
+
+        <fieldset class="form__progress">
+          <p class="progress__title">Ваши безбашенные<br> достежения в путешествии</p>
+
+          <p class="progress__wrapper">
+            <input class="progress__btn visually-hidden" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
+            <label class="progress__mark" for="selfie-shark">Сделал селфи с акулой</label>
+          </p>
+
+          <p class="progress__wrapper">
+            <input class="progress__btn visually-hidden" type="checkbox" name="burn-beach" id="burn-beach" checked>
+            <label class="progress__mark" for="burn-beach">Обгорел на пляже</label>
+          </p>
+
+          <p class="progress__wrapper">
+            <input class="progress__btn visually-hidden" type="checkbox" name="see-chack" id="see-chack">
+            <label class="progress__mark" for="see-chack">Видел Чака Норриса</label>
+          </p>
+
+          <p class="progress__wrapper">
+            <input class="progress__btn visually-hidden" type="checkbox" name="souvenir" id="souvenir">
+            <label class="progress__mark" for="souvenir">Накупил сувениров</label>
+          </p>
+
+          <p class="progress__wrapper">
+            <input class="progress__btn visually-hidden" type="checkbox" name="tower" id="tower" checked>
+            <label class="progress__mark" for="tower">Удержал башню</label>
+          </p>
+
+          <p class="progress__wrapper">
+            <input class="progress__btn visually-hidden" type="checkbox" name="smash" id="smash">
+            <label class="progress__mark" for="smash">Разгромил отель</label>
+          </p>
+        </fieldset>
+
+        <fieldset class="form__user-contact">
+          <legend class="user-contact__title visually-hidden">Контакты пользователя</legend>
+          <p class="user-contact__wrapper">
+            <label for="tel">Номер телефона</label>
+            <input class="user-contact__input" type="tel" id="tel" name="tel" placeholder="Номер, пожалуйста">
+          </p>
+
+          <p class="user-contact__wrapper">
+            <label for="email">Адрес почты</label>
+            <input class="user-contact__input" type="email" id="email" name="email" placeholder="Введите почту*" required>
+          </p>
+        </fieldset>
+
+        <div class="form__app__wrapper">
+          <fieldset class="form__app">
+              <legend>С каким приложением путешествовали?</legend>
+              <p class="app__wrapper">
+                <input class="app__btn visually-hidden" type="radio" name="app" id="app-ios" checked>
+                <label class="app__mark" for="app-ios">Pink для iOS</label>
+              </p>
+
+              <p class="app__wrapper">
+                <input class="app__btn visually-hidden" type="radio" name="app" id="app-android">
+                <label class="app__mark" for="app-android">Pink на Android</label>
+              </p>
+
+              <p class="app__wrapper">
+                <input class="app__btn visually-hidden" type="radio" name="app" id="app-windows">
+                <label class="app__mark" for="app-windows">Windows Phone</label>
+              </p>
+            </fieldset>
+        </div>
+
+        <p class="post__title">Опишите свои эмоции</p>
+        <textarea class="post__textarea" name="name" rows="6" cols="26">Можно прям в красках, не стесняясь в выражениях</textarea>
+
+        <input class="form__button" type="submit" value="Отправить форму">
+        <p class="form__required"><span>*</span> &#8212; Обязательные поля</p>
+      </form>
     </main>
 
     <footer class="page-footer">
