--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
       </section>
 
       <section class="advantages">
-        <div class="advantages__wrapper">
+        <div class="advantages__wrapper container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <p class="advantages__paragraf">Устали от серости мегаполиса?</p>
           <p class="advantages__paragraf">Нам есть, что вам предложить!</p>
