--- a/source/index.html
+++ b/source/index.html
@@ -66,7 +66,7 @@
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Меняет мир вокруг</h3>
-              <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br> усилить эфект</p>
+              <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br> усилить эффект</p>
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Заводит новых друзей</h3>
@@ -77,9 +77,11 @@
       </section>
 
       <section class="timer">
-        <h3 class="timer__title">Эффект<br> на 24 часа!</h3>
-        <p class="timer__paragraf">Британские учёные провели исследования и доказали, что положительный эффект<br> от использования приложения длится целые сутки!</p>
-        <a class="timer__know" href="#">Узнать больше об исследовании</a>
+        <div class="timer__wrapper">
+          <h3 class="timer__title">Эффект<br> на 24 часа!</h3>
+          <p class="timer__paragraf">Британские учёные провели исследования и доказали,<br class="timer__paragraf__desctop"> что положительный эффект<br class="timer__paragraf__tablet"> от использования приложения длится целые сутки!</p>
+          <a class="timer__know" href="#">Узнать больше об исследовании</a>
+      </div>
       </section>
 
       <section class="reviews">
