Добавляет изменения в главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -77,11 +77,11 @@
       </section>
 
       <section class="timer">
-        <div class="timer__wrapper">
+        <div class="timer__wrapper  container">
           <h3 class="timer__title">Эффект<br> на 24 часа!</h3>
           <p class="timer__paragraf">Британские учёные провели исследования и доказали,<br class="timer__paragraf__desctop"> что положительный эффект<br class="timer__paragraf__tablet"> от использования приложения длится целые сутки!</p>
           <a class="timer__know" href="#">Узнать больше об исследовании</a>
-      </div>
+        </div>
       </section>
 
       <section class="reviews">
