--- a/source/index.html
+++ b/source/index.html
@@ -193,9 +193,9 @@
             </tr>
           </table>
           <p class="price__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--1" type="button">1</button>
-            <button class="slider__toggle slider__toggle--2" type="button">2</button>
-            <button class="slider__toggle slider__toggle--3" type="button">3</button>
+            <button class="slider__toggle slider__toggle--1" type="button"><span class="visually-hidden">1</span></button>
+            <button class="slider__toggle slider__toggle--2 slider__toggle--active" type="button"><span class="visually-hidden">2</span></button>
+            <button class="slider__toggle slider__toggle--3" type="button"><span class="visually-hidden">3</span></button>
           </p>
         </div>
       </section>
