Изменяет структуру Less

--- a/source/index.html
+++ b/source/index.html
@@ -110,12 +110,12 @@
               </div>
             </li>
           </ul>
+          <button class="slider__toggle--left" type="button" name="left"><span class="visually-hidden">4</span></button>
+          <button class="slider__toggle--right" type="button" name="right"><span class="visually-hidden">5</span></button>
           <p class="reviews__toggles slider__toggles">
             <button class="slider__toggle slider__toggle--active" type="button"><span class="visually-hidden">1</span></button>
             <button class="slider__toggle" type="button"><span class="visually-hidden">2</span></button>
             <button class="slider__toggle" type="button"><span class="visually-hidden">3</span></button>
-            <button class="slider__toggle--left" type="button" name="left"></button>
-            <button class="slider__toggle--right" type="button" name="right"></button>
           </p>
         </div>
       </section>
@@ -238,10 +238,11 @@
               <p class="contacts__item">ул. Большая<br>Конюшенная, 19/8</p>
             </li>
           </ul>
-          <div class="contacts__map">
-          <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="400" height="300" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
-          </div>
         </div>
+      </section>
+
+      <section  class="map">
+        <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="400" height="300" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
       </section>
     </main>
 
