ДОбавляет карту и фон формы

--- a/source/form.html
+++ b/source/form.html
@@ -39,11 +39,13 @@
     </header>
 
     <main class="main-form">
-      <p class="form__tender"> Конкурс на самое безбашенное путешествие с Пинк</p>
-      <p class="form__histori">Поделитесь своей историей и получите шанс выиграть ценный приз &#8212; 1000 миль на вашу бонусную карту!<span class="form__histori__write">Пожалуйста, заполните форму ниже:</span>
+      <div class="main-form__background">
+        <p class="main-form__tender container"> Конкурс на самое безбашенное путешествие с Пинк</p>
+      </div>
+      <p class="main-form__histori container">Поделитесь своей историей и получите шанс выиграть ценный приз &#8212; 1000 миль на вашу бонусную карту!<span class="main-form__write"> Пожалуйста, заполните форму ниже:</span>
       </p>
-      <form class="form__user user__list" action="index.html" method="post">
-        <fieldset class="form__personal">
+      <form class="main-form__form form" action="index.html" method="post">
+        <fieldset class="form__personal personal">
           <legend class="visually-hidden">Персональные данные</legend>
 
           <p class="personal__wrapper">
