--- a/source/index.html
+++ b/source/index.html
@@ -10,11 +10,6 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
-          <!--<picture>
-            <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
-            <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-            <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" widht="74.426" height="22.859" alt="Логотип Пинк">
-          </picture>-->
           <svg style="display:none;">
             <style>
                 .page-header__logo svg {
@@ -312,9 +307,9 @@
 
       <section  class="map">
         <picture>
-          <source media="(min-width: 960px)" srcset="img/bg-map-desktop@1x.jpg">
-          <source media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.jpg">
-          <img class="map__image" src="img/bg-map-mobile@1x.png" widht="320" height="200" alt="Карта адреса Пинк">
+          <source media="(min-width: 960px)" srcset="img/bg-map-desktop_1x.jpg">
+          <source media="(min-width: 660px)" srcset="img/bg-map-tablet_1x.jpg">
+          <img class="map__image" src="img/bg-map-mobile_1x.png" widht="320" height="200" alt="Карта адреса Пинк">
         </picture>
         <iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="320" height="200" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
