--- a/source/form.html
+++ b/source/form.html
@@ -171,8 +171,8 @@
         </fieldset>
 
         <fieldset class="form__progress">
-          <legend class="form__name">Ваши безбашенные<br> достежения в путешествии</legend>
-          <div class="form__progress-wrapper container">
+          <legend class="form__name">Ваши безбашенные<!--br--> достежения в путешествии</legend>
+          <div class="form__progress-wrapper">
             <p class="form__block">
               <input class="form__btn visually-hidden" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
               <label class="form__mark" for="selfie-shark">Сделал селфи с акулой</label>
@@ -222,7 +222,7 @@
 
         <fieldset class="form__app">
           <legend>С каким приложением путешествовали?</legend>
-          <div class="form__progress-wrapper container">
+          <div class="form__app-wrapper">
             <p class="form__block">
               <input class="form__btn visually-hidden" type="radio" name="app" id="app-ios" checked>
               <label class="form__mark" for="app-ios">Pink для iOS</label>
