Добавляет изменения в главную страницу, страницу формы и галерею

--- a/source/index.html
+++ b/source/index.html
@@ -159,7 +159,7 @@
         <div class="advantages__wrapper container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <p class="advantages__paragraf">Устали от серости мегаполиса?</p>
-          <p class="advantages__paragraf">Нам есть, что вам предложить!</p>
+          <p class="advantages__paragraf">Нам есть, что&nbsp;вам предложить!</p>
           <ul class="advantages__list">
             <li class="advantages__item">
               <h3 class="advantages__title">Поднимает настроение</h3>
@@ -170,7 +170,7 @@
               <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br> усилить эффект</p>
             </li>
             <li class="advantages__item">
-              <h3 class="advantages__title">Заводит новых друзей</h3>
+              <h3 class="advantages__title">Заводит новых&nbsp;друзей</h3>
               <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
